--- a/HandsOn/WebContent/Project2.html
+++ b/HandsOn/WebContent/Project2.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src = "scripts/script2.js" type = "text/javascript"></script>
 		<meta charset="ISO-8859-1">
 		<title>Ajax</title>
 	</head>
 	
 	<body>
 		<select id = "states"></select>
-		<input type = "text" readonly id = "capitol"/>
+		<input type = "text" readonly id = "capital"/>
 	</body>
 </html>
